# hopeit.agents

./: .gitignore  IMPL_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  hopeit-agents-pypi-publishing.yml  hopeit-agents-qa.yml  hopeit-agents-test-pypi-publishing.yml
docker/: Dockerfile  README.md
docker/mcp/catalogs/: custom.yaml
docs/rfcs/: 001_initial_impl_spec.md
examples/: README.md
examples/apps/agent-example/: README.md  pyproject.toml
examples/apps/agent-example/config/: app-config.json
examples/apps/agent-example/src/agent_example/: __init__.py  run_agent.py  settings.py
examples/apps/agent-example/src/agent_example/events/: __init__.py  run_agent.py
examples/apps/agent-example/test/: test_run_agent.py
examples/apps/example-agents/: README.md  pyproject.toml
examples/apps/example-agents/config/: app-config.json
examples/apps/example-agents/config/agents/: expert-agent-prompt.md  main-agent-prompt.md  tool-call-prompt.md
examples/apps/example-agents/src/hopeit_agents/example_agents/: models.py  settings.py
examples/apps/example-agents/src/hopeit_agents/example_agents/agents/: expert_agent.py  main_agent.py
examples/apps/example-agents/test/: conftest.py  test_expert_agent.py  test_main_agent.py
examples/plugins/example-tool/: README.md  pyproject.toml
examples/plugins/example-tool/config/: plugin-config.json
examples/plugins/example-tool/src/hopeit/agents/example_tool/: __init__.py  models.py  tool.py
examples/plugins/example-tool/src/hopeit/agents/example_tool/events/: __init__.py  generate_random.py
examples/plugins/example-tool/src/hopeit_agents/example_tool/: __init__.py  models.py  tool.py
examples/plugins/example-tool/src/hopeit_agents/example_tool/api/: generate_random.py
examples/plugins/example-tool/src/hopeit_agents/example_tool/tool/: __init__.py  generate_random.py  sum_two_numbers.py
examples/plugins/example-tool/test/: conftest.py  test_generate_random.py  test_random_tool.py  test_sum_two_numbers.py
examples/servers/: __init__.py
examples/servers/my_mcp_server/: __init__.py  __main__.py
plugins/agents/agent-toolkit/: pyproject.toml
plugins/agents/agent-toolkit/src/hopeit_agents/agent_toolkit/: settings.py
plugins/agents/agent-toolkit/src/hopeit_agents/agent_toolkit/app/steps/: agent_loop.py
plugins/agents/agent-toolkit/src/hopeit_agents/agent_toolkit/mcp/: agent_tools.py
plugins/agents/agent-toolkit/test/: conftest.py
plugins/agents/agent-toolkit/test/unit/: test_agent_config_utils.py  test_agent_loop.py  test_agent_tools.py  test_prompts.py  test_settings.py
plugins/agents/mcp-bridge/: README.md  pyproject.toml
plugins/agents/mcp-bridge/config/: plugin-config.json
plugins/agents/mcp-bridge/src/hopeit/agents/mcp_bridge/: __init__.py  client.py  models.py  settings.py
plugins/agents/mcp-bridge/src/hopeit/agents/mcp_bridge/events/: invoke_tool.py  list_tools.py
plugins/agents/mcp-bridge/src/hopeit_agents/mcp_bridge/: __init__.py  agent_tooling.py  client.py  models.py  settings.py
plugins/agents/mcp-bridge/src/hopeit_agents/mcp_bridge/api/: invoke_tool.py  list_tools.py
plugins/agents/mcp-bridge/test/: test_bridge_client.py
plugins/agents/model-client/: README.md  pyproject.toml
plugins/agents/model-client/config/: plugin-config.json
plugins/agents/model-client/src/hopeit/agents/model_client/: __init__.py  client.py  models.py  settings.py
plugins/agents/model-client/src/hopeit/agents/model_client/events/: __init__.py  generate.py
plugins/agents/model-client/src/hopeit_agents/model_client/: __init__.py  client.py  conversation.py  models.py  settings.py
plugins/agents/model-client/src/hopeit_agents/model_client/api/: __init__.py  generate.py
plugins/agents/model-client/test/: conftest.py  test_client.py
plugins/mcp/mcp-client/: pyproject.toml
plugins/mcp/mcp-client/config/: plugin-config.json
plugins/mcp/mcp-client/src/hopeit_agents/mcp_client/: __init__.py  agent_tooling.py  client.py  models.py  settings.py
plugins/mcp/mcp-client/src/hopeit_agents/mcp_client/api/: __init__.py  invoke_tool.py  list_tools.py
plugins/mcp/mcp-client/test/: conftest.py
plugins/mcp/mcp-client/test/integration/: test_invoke_tool.py  test_list_tools.py
plugins/mcp/mcp-client/test/unit/: test_client.py
plugins/mcp/mcp-server/: pyproject.toml
plugins/mcp/mcp-server/config/: dev-noauth-docker.json  plugin-config.json
plugins/mcp/mcp-server/src/hopeit_agents/mcp_server/cli/: server.py
plugins/mcp/mcp-server/src/hopeit_agents/mcp_server/server/: handler.py  mcp.py
plugins/mcp/mcp-server/src/hopeit_agents/mcp_server/tools/: api.py
plugins/mcp/mcp-server/test/: conftest.py
plugins/mcp/mcp-server/test/integration/: test_mcp_server_integration.py
plugins/mcp/mcp-server/test/unit/: test_tools_api.py
