[project]
name = "hopeit.agents.workspace"
version = "0.1.0"

requires-python = ">=3.12"

description = "Workspace for hopeit.agents plugins and examples"
license = { text = "Apache 2" }
authors = [
    { name = "hopeit.agents contributors", email = "opensource@hopeit.com.ar" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Framework :: AsyncIO",
]
dynamic = ["readme"]
dependencies = [
    "hopeit.agents-model-client",
    "hopeit.agents-mcp-bridge",
    "hopeit.agents-example-tool",
    "agent-example",
]

[tool.uv]
package = false
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-aiohttp>=1.0.5",
    "pytest-asyncio>=0.25.3,<1.1",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.0",
    "ruff>=0.9.7",
    "isort>=5.13.2",
    "aiohttp>=3.10.0",
    "types-requests>=2.32.0",
    "types-aiofiles>=24.1.0",
    "types-redis>=4.6.0",
    "uvloop>=0.21.0",
]

[tool.uv.sources]
hopeit-agents-model-client = { path = "plugins/agents/model-client" }
hopeit-agents-mcp-bridge = { path = "plugins/agents/mcp-bridge" }
hopeit-agents-example-tool = { path = "examples/plugins/example-tool" }
agent-example = { path = "examples/apps/agent-example" }

[tool.mypy]
python_version = "3.11"
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_unimported = true
enable_error_code = ["truthy-bool", "redundant-expr"]
show_error_codes = true
pretty = true

[tool.ruff]
line-length = 100
src = [
    "plugins/agents/model-client/src",
    "plugins/agents/mcp-bridge/src",
    "examples/plugins/example-tool/src",
    "examples/apps/agent-example/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"**/test/**/*.py" = [
    "D",
    "S101",
    "ARG001",
    "ARG002",
    "ARG003",
    "ARG005",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN202",
    "PYI034",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
